k8s/customers-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customers
  template:
    metadata:
      labels:
        app: customers
    spec:
      containers:
        - image: kolan51/rso2021-customers:2021-11-02-17-26-12
          name: customers
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: customers
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: customers
