k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: proxy-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2 #/customers/v1/
spec:
  rules:
    - http:
        paths:
          - path: /customers(/|$)(.*)
            backend:
              serviceName: customers
              servicePort: 8080
#          - path: /comments(/|$)(.*)
#            backend:
#              serviceName: comments
#              servicePort: 8081

#kubectl get ingress
